--- a/styles/style.css
+++ b/styles/style.css
@@ -12,6 +12,7 @@
 body {
   font-family: "Work Sans", sans-serif;
 }
+/* common */
 .wrapper {
   background: rgba(255, 144, 14, 0.1);
 }
@@ -26,13 +27,21 @@ body {
   margin-top: 20px;
   border: 0;
 }
+.primary-text {
+  color: var(--primary);
+}
+.seconday-text {
+  color: var(--secondary);
+}
 .container {
   padding: 0 20px;
   width: 100%;
   max-width: 1240px;
   margin: 0 auto;
-  margin-bottom: 30px;
+  margin-bottom: 50px;
 }
+
+/* nav */
 .nav-section {
   padding-top: 20px;
 }
@@ -48,6 +57,7 @@ nav > ul {
   gap: 25px;
 }
 
+/* banner */
 .card {
   height: 100%;
   display: flex;
@@ -79,6 +89,7 @@ nav > ul {
   height: 400px;
 }
 
+/* features */
 .features-container {
   display: flex;
   justify-content: center;
@@ -104,12 +115,120 @@ nav > ul {
 .feature-desc {
   font-size: 1rem;
 }
-.primary-text {
-  color: var(--primary);
+
+/* more features */
+
+.more-features {
+  display: flex;
 }
-.seconday-text {
+
+.more-features-text-container {
+  width: 50%;
+  height: 100%;
+}
+.more-features-image-container {
+  position: relative;
+  width: 50%;
+}
+.more-features-image-container > img {
+  width: 90%;
+  height: auto;
+  margin-left: 50px;
+}
+.features-btn {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 242px;
+  height: 150px;
+  text-align: center;
+  color: #ffffff;
+  background-color: #ff900e;
+  font-size: 35px;
+  font-weight: 700;
+  border-radius: 5px;
+  margin-left: 20px;
+  border: 0;
+  padding: 42px;
+}
+.btn-text {
+  font-size: 16px;
+}
+.special {
+  border-left: 4px solid var(--primary);
+  padding: 0 10px;
+}
+.extra-features {
+  display: flex;
+  flex-direction: column;
+  gap: 10px 0;
+}
+.extra-features-card {
+  padding: 30px;
+  box-shadow: 0 3px 9px rgb(0 0 0 / 0.1);
+  border-radius: 5px;
+}
+.extra-features-title {
+  font-size: 20px;
+  margin-bottom: 10px;
+}
+
+/* facts */
+.facts-container {
+  display: flex;
+  justify-content: space-around;
+}
+.fact-title,
+.sponsor-title,
+.more-features-title {
+  font-size: 2.2rem;
+}
+.facts-text {
+  margin-bottom: 50px;
+}
+.fact-desc,
+.sponsor-desc,
+.more-features-desc {
+  margin: 20px 0;
+}
+.facts-container > div {
+  width: 200px;
+  height: 150px;
+  border: 1px solid var(--primary);
+  padding: 15px 15px;
+  text-align: center;
+}
+
+.facts-container > div > p {
   color: var(--secondary);
 }
+
+/* sponsors */
+.sponsors-text {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  margin-bottom: 20px;
+}
+.sponsors-logo-container {
+  display: grid;
+  grid-template-columns: repeat(5, 1fr);
+  gap: 10px;
+  filter: grayscale(1);
+}
+
+/* footer */
+.foooter {
+  width: 100%;
+  height: 100px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  background: rgba(255, 144, 14, 0.1);
+}
+/* media query */
 @media screen and (max-width: 870px) {
   nav > ul {
     gap: 15px;
@@ -137,4 +256,35 @@ nav > ul {
     object-fit: cover;
     object-position: top;
   }
+  .facts-container {
+    flex-wrap: wrap;
+    gap: 10px;
+  }
+  .facts-container > div {
+    width: 100%;
+    padding: 10px 10px;
+  }
+  .sponsors-logo-container {
+    grid-template-columns: repeat(2, 1fr);
+    padding: 10px 20px;
+  }
+  .more-features {
+    flex-direction: column;
+  }
+  .more-features-text-container {
+    width: 100%;
+    margin: 40px 0;
+  }
+  .more-features-image-container {
+    width: 100%;
+  }
+  .more-features-image-container > img {
+    width: 100%;
+    margin-left: 0;
+  }
+  .features-btn {
+    margin-left: 0;
+  }
 }
+
+/* Style the button and place it in the middle of the container/image */
